# gamelibs-spdlog

./: Makefile  meson.build
include/spdlog/: common-inl.h  common.h  logger-inl.h  logger.h  pattern_formatter-inl.h
include/spdlog/details/: os-inl.h  tcp_client-windows.h  thread_pool-inl.h  thread_pool.h
msvc/: spdlog.vcxproj  spdlog.vcxproj.filters
src/: bundled_fmtlib_format.cpp
